# modelswitch

./: .gitignore  .zedrules  CLAUDE.md  DEVWORKFLOW.md  Dockerfile  README.md  TESTGUIDE.md  config.yaml.example  docker-compose.yaml  pyproject.toml  requirements.txt  todo_test.md
.github/workflows/: ci.yml
app/: __init__.py  cli.py  cli_inner.py  config.yaml.example  main.py  workspace.py
app/adapters/: anthropic_adapter.py  base.py  litellm_adapter.py  openai_adapter.py
app/api/: anthropic_routes.py  api_key_routes.py  config_routes.py  conversation_routes.py  log_routes.py  openai_routes.py  usage_routes.py
app/core/: chain_router.py  circuit_breaker.py  config.py  config_watcher.py  exceptions.py  middleware.py  request_queue.py
app/models/: config_models.py
app/services/: api_key_service.py  conv_indexer.py  usage_tracker.py
app/utils/: logging.py  message_converter.py  metrics.py  tracking.py
app/web/: index.html
app/web/css/: style.css
app/web/js/: app.js  i18n.js
scripts/: smoketest.py  smoketest.sh
tests/: conftest.py  test_anthropic_adapter.py  test_api_key_service.py  test_api_routes.py  test_chain_router.py  test_circuit_breaker.py  test_client_compat.py  test_config_models.py  test_conversation_routes.py  test_e2e.py  test_message_converter.py  test_openai_adapter.py  test_request_queue.py  test_usage_tracker.py
web/: index.html
web/css/: style.css
web/js/: app.js  i18n.js
